[package]
name = "reverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = { version = "1.10.0", optional = true }

[features]
default = []  # Keeps `grapheme` feature off by default
grapheme = ["unicode-segmentation"] # This is just a name for the feature and is descriptive because it indicates that enabling this feature will add support for grapheme-based string reversal (using the `unicode-segmentation` crate to handle Unicode graphemes properly).
